buildscript {
    repositories {
        maven { url "https://art.x5.ru/artifactory/maven/" }
        maven { url "https://nx.x5.ru/repository/maven/" }
        maven { url "https://plugins.gradle.org/m2/" }
    }
    dependencies {
        classpath "org.springframework.boot:spring-boot-gradle-plugin:2.1.6.RELEASE"
        classpath "io.spring.gradle:dependency-management-plugin:1.0.8.RELEASE"
        classpath "gradle.plugin.org.hidetake:gradle-swagger-generator-plugin:2.18.1"
    }
}

apply plugin: 'java'
apply plugin: 'org.springframework.boot'
apply plugin: 'io.spring.dependency-management'
apply plugin: 'org.hidetake.swagger.generator'

group = 'ru.digital.league.x5.sign'
version = '1.1.0'
description = 'Document sign service: Bindings'
jar.archiveName = 'dss-bindings'

sourceCompatibility = 11.0
targetCompatibility = 11.0

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    maven { url "https://art.x5.ru/artifactory/maven/" }
    maven { url 'https://nx.x5.ru/repository/maven/' }
    mavenCentral()
}

dependencies {
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.liquibase:liquibase-core'
    implementation 'org.modelmapper:modelmapper:2.3.5'
    implementation 'javax.xml.bind:jaxb-api:2.3.0'
    implementation 'com.sun.xml.bind:jaxb-impl:2.3.0'
    implementation 'com.sun.xml.bind:jaxb-core:2.3.0'
    implementation 'org.springframework:spring-oxm:5.1.9.RELEASE'
    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.4'


    implementation 'org.postgresql:postgresql'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    compile 'org.apache.commons:commons-collections4:4.1'

    implementation 'org.springframework:spring-aspects'
    implementation 'io.micrometer:micrometer-registry-prometheus:1.6.3'
    implementation 'io.micrometer:micrometer-core:1.6.3'

    compile('org.springframework.boot:spring-boot-starter-security')
    compile('org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure:2.1.5.RELEASE')
    compile('org.springframework.security:spring-security-jwt:1.0.10.RELEASE')

    swaggerCodegen 'io.swagger.codegen.v3:swagger-codegen-cli:3.0.5'
    swaggerUI 'org.webjars:swagger-ui:3.23.4'
}

sourceSets {
    main {
        resources {
            srcDirs 'build/swagger-ui-petstore'
        }
    }
}

swaggerSources {
    petstore {
        inputFile = file("$rootDir/api-bindings.yaml")
        code {
            language = 'html2'
        }
    }
}

compileJava.dependsOn generateSwaggerUI
